style: avoid break inside columns

--- a/components/form-field/css/_mixin.scss
+++ b/components/form-field/css/_mixin.scss
@@ -4,6 +4,7 @@
  */
 
 @mixin utrecht-form-field {
+  break-inside: avoid;
   font-family: var(--utrecht-document-font-family, inherit);
   margin-block-end: calc(var(--utrecht-space-around, 0) * var(--utrecht-form-field-margin-block-end, 0));
   margin-block-start: calc(var(--utrecht-space-around, 0) * var(--utrecht-form-field-margin-block-start, 0));
